# sd-notify-adapter

./: .pre-commit-config.yaml  Cargo.toml  Containerfile  README.md
.cargo/: config.toml
.github/workflows/: build-image.yaml
src/: config.rs  error.rs  event.rs  main.rs  message.rs  status.rs
src/server/: http.rs  uds.rs
src/timer/: startup.rs  watchdog.rs
